# oots-get

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  oots.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.md
oots_get/: __init__.py  constants.py  helpers.py  main.py
ootsget/: __init__.py  ootsget.py
src/ootsget/: __init__.py  ootsget.py  skeleton.py
tests/: conftest.py  test_ootsget.py  test_skeleton.py
